[project]
name = "restai"
version = "6.0.0"
description = "RESTAI, so many 'A's and 'I's, so little time..."
authors = [{ name = "Pedro Dias", email = "petermdias@gmail.com" }]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "openai>=1.99.0,<2",
    "fastapi>=0.115.9,<0.116",
    "langchain>=0.3.23,<0.4",
    "uvicorn>=0.34.0,<0.35",
    "python-multipart>=0.0.20,<0.0.21",
    "python-dotenv>=1.1.0,<2",
    "pdfminer.six",
    "unstructured>=0.17.2,<0.18",
    "pydantic>=2.11.2,<3",
    "tiktoken>=0.9.0,<0.10",
    "python-pptx>=1.0.2,<2",
    "bs4>=0.0.2,<0.0.3",
    "selenium>=4.30.0,<5",
    "yake>=0.4.8,<0.5",
    "passlib>=1.7.4,<2",
    "SQLAlchemy>=2.0.35,<3",
    "jq>=1.8.0,<2",
    "redis>=5.2.1,<6",
    "openpyxl>=3.1.5,<4",
    "google-cloud-aiplatform>=1.87.0,<2",
    "pymysql>=1.1.1,<2",
    "unidecode>=1.3.8,<2",
    "httpx>=0.28.1,<0.29",
    "exceptiongroup>=1.2.2,<2",
    "wheel>=0.42.0,<0.43",
    "pyjwt>=2.9.0,<3",
    "langchain-community>=0.3.21,<0.4",
    "langchain-openai>=0.3.30,<0.4",
    "pypdf>=5.1.0,<6",
    "ollama>=0.4.7,<0.5",
    "opencv-python>=4.10.0.84,<5",
    "ip-adapter>=0.1.0,<0.2",
    "ilock>=1.0.3,<2",
    "docx2txt>=0.8,<0.9",
    "llama-index-core>=0.12.35,<0.13",
    "llama-index-embeddings-langchain>=0.3.0,<0.4",
    "llama-index-vector-stores-redis>=0.5.0,<0.6",
    "llama-index-vector-stores-chroma>=0.4.1,<0.5",
    "redisvl>=0.4.1,<0.5",
    "chromadb>=1.0.0,<2",
    "llama-index-llms-openai>=0.5.3,<0.5",
    "einops>=0.8.0,<0.9",
    "llama-index-llms-ollama>=0.5.4,<0.6",
    "llama-index-postprocessor-colbert-rerank>=0.3.0,<0.4",
    "llama-index-llms-groq>=0.3.1,<0.4",
    "llama-index-embeddings-openai>=0.5.0,<0.6",
    "llama-index-readers-file>=0.4.7,<0.5",
    "deepeval>=2.7.1,<3",
    "llama-index-llms-anthropic>=0.6.10,<0.7",
    "llama-index-llms-litellm>=0.4.1,<0.5",
    "psycopg2-binary>=2.9.10,<3",
    "llama-index-vector-stores-pinecone>=0.4.5,<0.5",
    "sentry-sdk[fastapi]>=2.25.1,<3",
    "llama-index-llms-gemini>=0.4.14,<0.5",
    "google-generativeai>=0.8.4,<0.9",
    "llama-index-llms-azure-openai>=0.4.0,<0.5",
    "duckduckgo-search>=6.2.13,<7",
    "wikipedia>=1.4.0,<2",
    "llama-index-storage-chat-store-redis>=0.4.1,<0.5",
    "pandas>=2.2.3,<3",
    "llama-index-llms-vllm>=0.5.0,<0.6",
    "llama-index-multi-modal-llms-ollama>=0.4.0,<0.5",
    "llama-index-llms-openai-like>=0.5.0,<0.6",
    "paramiko>=3.5.0,<4",
    "soundfile>=0.13.1,<0.14",
    "langchain-huggingface>=0.1.2,<0.2",
    "llama-index-embeddings-ollama>=0.5.0,<0.6",
    "llama-index-readers-json>=0.3.0,<0.4",
    "typer>=0.15.2",
    "ldap3>=2.9.1,<3",
    "authlib>=1.5.2,<2",
    "itsdangerous>=2.2.0,<3",
    "alembic>=1.15.2,<2",
    "llama-index-multi-modal-llms-gemini>=0.5.0",
    "llama-index-tools-mcp>=0.2.4",
    "fastmcp>=2.0",
    "llama-index-node-parser-docling>=0.3.2",
    "llama-index-readers-docling>=0.3.2",
    "tomli>=2.2.1",
]

[dependency-groups]
gpu = [
    "transformers>=4.42.0,<=4.42.4",
    "xformers>=0.0.29.post3,<0.0.30",
    "optimum==1.24.0",
    "accelerate>=1.6.0,<2",
    "bitsandbytes>=0.45.4,<0.46",
    "diffusers==0.33.1",
    "sentencepiece>=0.2.0",
    "torch>=2.6.0,<3",
    "kornia>=0.8.0,<0.9",
    "timm>=1.0.15,<2",
    "triton>=3.2.0,<4"
]
dev = [
    "pylint==3.0.2",
    "debugpy>=1.8.6,<2",
    "black>=25.1.0,<26",
]

[tool.uv]
default-groups = [
    "gpu",
    "dev",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
