[project]
name = "restai-core"
version = "6.1.33"
description = "RESTAI, so many 'A's and 'I's, so little time..."
authors = [{ name = "Pedro Dias", email = "petermdias@gmail.com" }]
requires-python = ">=3.11,<3.14"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "openai>=1.109.0,<3",
    "fastapi>=0.136.0,<0.137",
    "starlette>=0.46.0,<2",
    "langchain>=0.3.28,<2",
    "uvicorn>=0.44.0,<0.45",
    "python-multipart>=0.0.26,<0.1",
    "python-dotenv>=1.2.2,<2",
    "pdfminer.six",
    "unstructured>=0.21.5,<0.23",
    "pydantic>=2.13.1,<3",
    "tiktoken>=0.12.0,<0.13",
    "python-pptx>=1.0.2,<2",
    "bs4>=0.0.2,<0.1",
    "selenium>=4.43.0,<5",
    "yake>=0.4.8,<0.8",
    "bcrypt>=4.2.0,<6",
    "SQLAlchemy>=2.0.49,<3",
    "jq>=1.11.0,<2",
    "redis>=5.3.0,<8",
    "openpyxl>=3.1.5,<4",
    "google-cloud-aiplatform>=1.148.0,<2",
    "pymysql>=1.1.2,<2",
    "unidecode>=1.4.0,<2",
    "httpx>=0.28.1,<0.29",
    "exceptiongroup>=1.3.1,<2",
    "wheel>=0.46.3,<0.47",
    "pyjwt>=2.12.1,<3",
    "pyotp>=2.9.0,<3",
    "langchain-community>=0.3.31,<0.5",
    "langchain-openai>=0.3.35,<2",
    "pypdf>=6.10.2,<7",
    "docker>=7.1.0,<8",
    "ollama>=0.6.1,<0.7",
    "opencv-python-headless>=4.8,<5",
    "ip-adapter>=0.1.0,<0.2",
    "ilock>=1.0.3,<2",
    "docx2txt>=0.9,<0.10",
    "llama-index-core>=0.14.20,<0.15",
    "llama-index-embeddings-langchain>=0.5.0,<0.6",
    "llama-index-vector-stores-chroma>=0.5.5,<0.6",
    "llama-index-vector-stores-postgres>=0.6.0,<0.9",
    "llama-index-vector-stores-weaviate>=0.6,<2",
    "llama-index-vector-stores-pinecone>=0.5,<0.9",
    "pgvector>=0.4.2,<0.5",
    "pinecone>=7.0.0,<9",
    "weaviate-client>=4.15.0,<5",
    "chromadb>=1.5.8,<2",
    "llama-index-llms-openai>=0.7.5,<0.8",
    "einops>=0.8.2,<0.9",
    "llama-index-llms-ollama>=0.7.0,<0.8",
    "llama-index-postprocessor-colbert-rerank>=0.5.0,<0.6",
    "llama-index-embeddings-openai>=0.6.0,<0.7",
    "llama-index-readers-file>=0.6.0,<0.7",
    "deepeval>=3.9.7,<4",
    "llama-index-llms-anthropic>=0.11.2,<0.12",
    "llama-index-llms-litellm>=0.7.1,<0.8",
    "psycopg2-binary>=2.9.11,<3",
    "sentry-sdk[fastapi]>=2.58.0,<3",
    "llama-index-llms-gemini>=0.6.2,<0.7",
    "google-generativeai>=0.8.6,<0.9",
    "llama-index-llms-azure-openai>=0.5.3,<0.6",
    "llama-index-llms-bedrock-converse>=0.7.0,<0.15",
    "ddgs>=9.14.0,<10",
    "wikipedia>=1.4.0,<2",
    "llama-index-storage-chat-store-redis>=0.7.0,<0.8",
    "pandas>=2.2.3,<4",
    "llama-index-llms-vllm>=0.7.0,<0.8",
    "llama-index-multi-modal-llms-ollama>=0.6.1,<0.7",
    "llama-index-llms-openai-like>=0.7.1,<0.8",
    "paramiko>=3.5.1,<5",
    "soundfile>=0.13.1,<0.14",
    "langchain-huggingface>=0.1.2,<2",
    "llama-index-embeddings-ollama>=0.9.0,<0.10",
    "llama-index-readers-json>=0.5.0,<0.6",
    "typer>=0.21.0,<0.25",
    "ldap3>=2.9.1,<3",
    "authlib>=1.6.11,<2",
    "itsdangerous>=2.2.0,<3",
    "alembic>=1.18.4,<2",
    "llama-index-multi-modal-llms-gemini>=0.6.1,<0.7",
    "llama-index-tools-mcp>=0.4.8,<0.5",
    "fastmcp>=2.14,<4",
    "llama-index-node-parser-docling>=0.4.2,<0.5",
    "tomli>=2.4.1,<3",
    "llama-index-readers-docling>=0.4.2,<0.5",
    "markitdown[all]>=0.1.5,<0.2",
    "slack-bolt>=1.28.0,<2",
]

[project.scripts]
restai = "restai.cli:main"

[dependency-groups]
gpu = [
    "transformers>=4.56.0,<4.57",
    "xformers>=0.0.29.post3,<0.0.30",
    "optimum>=1.24.0,<2",
    "accelerate>=1.13.0,<2",
    "bitsandbytes>=0.45.5,<0.46",
    "diffusers>=0.33.1,<0.34",
    "sentencepiece>=0.2.1",
    "torch>=2.6.0,<3",
    "kornia>=0.8.2,<0.9",
    "timm>=1.0.25,<2",
    "triton>=3.2.0,<4"
]
dev = [
    "pylint>=3.3.0,<4",
    "debugpy>=1.8.20,<2",
    "black>=25.12.0,<27",
]

[tool.uv]
default-groups = [
    "gpu",
    "dev",
]
no-build-isolation-package = ["xformers"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
artifacts = ["frontend/build/**"]
exclude = [
    "wordpress/**",
    "wordpress",
]

[tool.hatch.build.targets.sdist]
include = ["restai/", "modules/", "migrations/", "crons/", "frontend/build/", "alembic.ini", "database.py"]

[tool.hatch.build.targets.wheel]
packages = ["restai", "modules", "migrations"]

[tool.hatch.build.targets.wheel.force-include]
"frontend/build" = "frontend/build"
"alembic.ini" = "alembic.ini"
"database.py" = "database.py"
"crons" = "crons"
